made a base html for all other files to inherit

--- a/coreApp/templates/coreApp/index.html
+++ b/coreApp/templates/coreApp/index.html
@@ -1,3 +1,7 @@
-<p>Fortune's Trials</p>
+{% extends "coreApp/base.html" %}
+
+{% block content %}
 
 <p>Compete against friends to gain the most currency.</p>
+
+{% endblock content %}
