--- a/coreApp/templates/coreApp/base.html
+++ b/coreApp/templates/coreApp/base.html
@@ -1,5 +1,10 @@
 <p>
-    <a href="{% url 'fortunes_trials:index' %}">Fortune's Trials</a>
+    <a href="{% url 'fortunes_trials:index' %}">Fortune's Trials</a> - 
+    {% if user.is_authenticated %}
+        Hello, {{ user.username }}.
+    {% else %}
+        <a href="{% url 'users:login' %}">Log in</a>
+    {% endif %}
 </p>
 
 {% block content %}{% endblock content %}
