--- a/coreApp/templates/coreApp/base.html
+++ b/coreApp/templates/coreApp/base.html
@@ -2,6 +2,7 @@
     <a href="{% url 'fortunes_trials:index' %}">Fortune's Trials</a> - 
     {% if user.is_authenticated %}
         Hello, {{ user.username }}.
+        <a href="{% url 'users:logout' %}">Log out</a>
     {% else %}
         <a href="{% url 'users:login' %}">Log in</a>
     {% endif %}
